--- a/config/apex-tools/default/core.entity_view_display.node.service_support.teaser.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.service_support.teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.service_support.field_faqs_section
     - field.field.node.service_support.field_forms
     - field.field.node.service_support.field_hero
+    - field.field.node.service_support.field_hubspot_node
     - field.field.node.service_support.field_mailing_list_form
     - field.field.node.service_support.field_seo
     - node.type.service_support
@@ -37,7 +38,9 @@ hidden:
   field_faqs_section: true
   field_forms: true
   field_hero: true
+  field_hubspot_node: true
   field_mailing_list_form: true
   field_seo: true
   langcode: true
   search_api_excerpt: true
+  uuid: true
