--- a/config/apex-tools/default/core.entity_view_display.node.solutions.teaser.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.solutions.teaser.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.solutions.field_find_a_distributor
     - field.field.node.solutions.field_forms
     - field.field.node.solutions.field_hero
+    - field.field.node.solutions.field_hubspot_node
     - field.field.node.solutions.field_mailing_list_form
     - field.field.node.solutions.field_seo
     - field.field.node.solutions.field_webform
@@ -40,8 +41,10 @@ hidden:
   field_find_a_distributor: true
   field_forms: true
   field_hero: true
+  field_hubspot_node: true
   field_mailing_list_form: true
   field_seo: true
   field_webform: true
   langcode: true
   search_api_excerpt: true
+  uuid: true
