--- a/config/apex-tools/default/core.entity_view_display.node.service_support.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.service_support.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.service_support.field_faqs_section
     - field.field.node.service_support.field_forms
     - field.field.node.service_support.field_hero
+    - field.field.node.service_support.field_hubspot_node
     - field.field.node.service_support.field_mailing_list_form
     - field.field.node.service_support.field_seo
     - node.type.service_support
@@ -51,18 +52,9 @@ content:
       view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 6
-    region: content
-  field_faqs_section:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
     weight: 5
     region: content
-  field_forms:
+  field_faqs_section:
     type: entity_reference_revisions_entity_view
     label: hidden
     settings:
@@ -80,15 +72,25 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
+  field_hubspot_node:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 7
+    region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 7
+    weight: 6
     region: content
 hidden:
+  field_forms: true
   field_mailing_list_form: true
   langcode: true
   links: true
   search_api_excerpt: true
+  uuid: true
