--- a/config/apex-tools/default/node.type.hubspot_form.yml
+++ b/config/apex-tools/default/node.type.hubspot_form.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Hubspot Form'
+name: 'Hubspot and other Forms'
 type: hubspot_form
 description: ''
 help: ''
