--- a/docroot/modules/custom/at_migrations/at_migrations.services.yml
+++ b/docroot/modules/custom/at_migrations/at_migrations.services.yml
@@ -4,3 +4,10 @@ services:
     class: Drupal\at_migrations\Commands\ProductDownloadService
     tags:
       - { name: drush.command }
+  at_common.product_cleanup_service:
+    class: Drupal\at_migrations\Commands\ProductsCleanupService
+    arguments:
+      - '@entity_type.manager'
+      - '@logger.channel.cron'
+    tags:
+      -  { name: drush.command }
