APS-166: composer files

--- a/composer.json
+++ b/composer.json
@@ -53,9 +53,9 @@
         "drupal/allowed_formats": "^1.4",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/bg_image_formatter": "^1.16",
-        "drupal/blazy": "^2.2",
+        "drupal/blazy": "^2.16",
         "drupal/block_class": "^1.1",
-        "drupal/block_field": "^1.0@alpha",
+        "drupal/block_field": "1.x-dev@dev",
         "drupal/classy_paragraphs": "^1.0-rc1",
         "drupal/color_field": "^2.4",
         "drupal/config_export_ignore": "^1.1",
@@ -154,6 +154,8 @@
         "drupal/shield": "^1.6",
         "drupal/simple_sitemap": "^3.3",
         "drupal/sitemap": "^2.0@beta",
+        "drupal/slick": "^2.9",
+        "drupal/slick_views": "^2.7",
         "drupal/smart_trim": "^2.0.0",
         "drupal/stage_file_proxy": "^1.0",
         "drupal/structure_sync": "^2.0",
