APS-166: Config files changes

--- a/config/clecotools/default/core.entity_view_display.node.home.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.home.default.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.home.field_mailing_list_form
     - field.field.node.home.field_seo
     - field.field.node.home.field_testimonials_block
-    - field.field.node.home.field_trus
+    - field.field.node.home.field_trusted_by_biggest
     - node.type.home
   module:
     - block_field
@@ -88,9 +88,9 @@ content:
     third_party_settings: {  }
     weight: 5
     region: content
-  field_trus:
+  field_trusted_by_biggest:
     type: block_field
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 6
