--- a/config/clecotools/default/core.entity_form_display.node.home.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.home.default.yml
@@ -11,10 +11,10 @@ dependencies:
     - field.field.node.home.field_mailing_list_form
     - field.field.node.home.field_seo
     - field.field.node.home.field_testimonials_block
-    - field.field.node.home.field_trus
+    - field.field.node.home.field_trusted_by_biggest
     - node.type.home
-    - workflows.workflow.editorial
   module:
+    - block_field
     - content_moderation
     - metatag
     - paragraphs
@@ -38,7 +38,7 @@ content:
     third_party_settings: {  }
   field_callout_section_footer:
     type: entity_reference_paragraphs
-    weight: 7
+    weight: 8
     region: content
     settings:
       title: Paragraph
@@ -84,7 +84,7 @@ content:
     third_party_settings: {  }
   field_mailing_list_form:
     type: entity_reference_paragraphs
-    weight: 13
+    weight: 14
     region: content
     settings:
       title: 'Mailing List Form'
@@ -96,7 +96,7 @@ content:
     third_party_settings: {  }
   field_seo:
     type: metatag_firehose
-    weight: 10
+    weight: 11
     region: content
     settings:
       sidebar: true
@@ -114,9 +114,9 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
-  field_trus:
+  field_trusted_by_biggest:
     type: block_field_default
-    weight: 8
+    weight: 7
     region: content
     settings:
       plugin_id: ''
@@ -132,19 +132,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 9
     region: content
     settings:
       display_label: true
@@ -158,7 +158,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
