APEX-330: Hubspot foms

--- a/config/apex-tools/default/block.block.views_block__hubspot_forms_hubspot_title_icon.yml
+++ b/config/apex-tools/default/block.block.views_block__hubspot_forms_hubspot_title_icon.yml
@@ -27,4 +27,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/contact\r\n/kontakt\r\n/industry-solutions\r\n/support\r\n/unterstützung"
+    pages: "/contact\r\n/kontakt\r\n/industry-solutions\r\n/support\r\n/unterstützung\r\n/industry-solutions/*\r\n/losungen/*"
