--- a/config/apex-tools/default/field.field.node.hubspot_form.field_image.yml
+++ b/config/apex-tools/default/field.field.node.hubspot_form.field_image.yml
@@ -10,7 +10,7 @@ id: node.hubspot_form.field_image
 field_name: field_image
 entity_type: node
 bundle: hubspot_form
-label: 'Hubspot Icon'
+label: 'Form Icon'
 description: ''
 required: false
 translatable: true
