--- a/config/apex-tools/default/core.entity_view_display.node.hubspot_form.teaser.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.hubspot_form.teaser.yml
@@ -5,8 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.hubspot_form.body
+    - field.field.node.hubspot_form.field_form_link
     - field.field.node.hubspot_form.field_hubspot_code
+    - field.field.node.hubspot_form.field_hubspot_form
     - field.field.node.hubspot_form.field_image
+    - field.field.node.hubspot_form.field_not_a_hubspot_form
     - node.type.hubspot_form
   module:
     - text
@@ -30,8 +33,11 @@ content:
     weight: 100
     region: content
 hidden:
+  field_form_link: true
   field_hubspot_code: true
+  field_hubspot_form: true
   field_image: true
+  field_not_a_hubspot_form: true
   langcode: true
   search_api_excerpt: true
   uuid: true
