--- a/config/apex-tools/default/core.entity_view_display.node.solutions.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.solutions.default.yml
@@ -84,14 +84,6 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
-  field_hubspot_node:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 10
-    region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
@@ -114,6 +106,7 @@ content:
     region: content
 hidden:
   field_forms: true
+  field_hubspot_node: true
   field_mailing_list_form: true
   langcode: true
   search_api_excerpt: true
