APS-167 Trusted by biggest banner component (with carousel) frontend styling.

--- a/config/clecotools/default/image.style.carousel_image.yml
+++ b/config/clecotools/default/image.style.carousel_image.yml
@@ -3,12 +3,13 @@ langcode: en
 status: true
 dependencies: {  }
 name: carousel_image
-label: 'Carousel Image (220x220)'
+label: 'Carousel Image (175×175)'
 effects:
-  1da087b2-13d9-448e-8f12-5edf356e8784:
-    uuid: 1da087b2-13d9-448e-8f12-5edf356e8784
-    id: image_resize
-    weight: 1
+  2976a50d-0ff2-4889-9436-92b402b36a52:
+    uuid: 2976a50d-0ff2-4889-9436-92b402b36a52
+    id: image_scale
+    weight: 2
     data:
-      width: 220
-      height: 220
+      width: 175
+      height: 175
+      upscale: false
