--- a/config/clecotools/default/slick.optionset.trusted_by_biggest_carousel.yml
+++ b/config/clecotools/default/slick.optionset.trusted_by_biggest_carousel.yml
@@ -8,10 +8,10 @@ weight: 0
 label: trusted-by-biggest-carousel
 group: ''
 skin: default
-breakpoints: 0
+breakpoints: 2
 optimized: false
 options:
-  options__active_tab: edit-options-settings
+  options__active_tab: edit-options-responsives
   settings:
     mobileFirst: true
     asNavFor: ''
@@ -46,8 +46,8 @@ options:
     rows: 1
     slidesPerRow: 1
     slide: ''
-    slidesToShow: 4
-    slidesToScroll: 4
+    slidesToShow: 1
+    slidesToScroll: 1
     speed: 500
     swipe: true
     swipeToSlide: false
@@ -64,3 +64,79 @@ options:
     vertical: false
     verticalSwiping: false
     waitForAnimate: true
+  responsives:
+    responsive:
+      -
+        breakpoint: 1198
+        unslick: false
+        settings:
+          adaptiveHeight: false
+          autoplay: true
+          pauseOnHover: false
+          pauseOnDotsHover: false
+          pauseOnFocus: false
+          autoplaySpeed: 3000
+          arrows: false
+          centerMode: false
+          centerPadding: 50px
+          dots: false
+          draggable: false
+          fade: false
+          focusOnSelect: false
+          infinite: true
+          initialSlide: 1
+          respondTo: window
+          rows: 1
+          slidesPerRow: 1
+          slidesToShow: 4
+          slidesToScroll: 4
+          speed: 500
+          swipe: true
+          swipeToSlide: false
+          edgeFriction: 0.35
+          touchMove: true
+          touchThreshold: 5
+          cssEase: ease
+          cssEaseBezier: ''
+          cssEaseOverride: ''
+          variableWidth: false
+          vertical: false
+          verticalSwiping: false
+          waitForAnimate: true
+      -
+        breakpoint: 767
+        unslick: false
+        settings:
+          adaptiveHeight: false
+          autoplay: true
+          pauseOnHover: false
+          pauseOnDotsHover: false
+          pauseOnFocus: false
+          autoplaySpeed: 3000
+          arrows: false
+          centerMode: false
+          centerPadding: 50px
+          dots: false
+          draggable: false
+          fade: false
+          focusOnSelect: false
+          infinite: true
+          initialSlide: 0
+          respondTo: window
+          rows: 1
+          slidesPerRow: 1
+          slidesToShow: 3
+          slidesToScroll: 3
+          speed: 500
+          swipe: true
+          swipeToSlide: false
+          edgeFriction: 0.35
+          touchMove: true
+          touchThreshold: 5
+          cssEase: ease
+          cssEaseBezier: ''
+          cssEaseOverride: ''
+          variableWidth: false
+          vertical: false
+          verticalSwiping: false
+          waitForAnimate: true
