feature/APEX-652: AT-custom-quotation

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "drupal/block_field": "^1.0@alpha",
         "drupal/classy_paragraphs": "^1.0-rc1",
         "drupal/color_field": "^2.4",
+        "drupal/conditional_fields": "^4.0@alpha",
         "drupal/config_export_ignore": "^1.1",
         "drupal/config_ignore": "^2.0",
         "drupal/config_split": "^1.0",
@@ -85,6 +86,7 @@
         "drupal/entity": "^1.4",
         "drupal/entity_browser": "^2.9",
         "drupal/entity_clone": "^1.0@beta",
+        "drupal/entity_print": "2.x",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/entity_usage": "^2.0@beta",
         "drupal/environment_indicator": "^4.0",
@@ -152,6 +154,7 @@
         "drupal/selective_better_exposed_filters": "^3.0@beta",
         "drupal/sfweb2lead_webform": "^5.2",
         "drupal/shield": "^1.6",
+        "drupal/simple_multistep": "^2.0",
         "drupal/simple_sitemap": "^3.3",
         "drupal/sitemap": "^2.0@beta",
         "drupal/smart_trim": "^2.0.0",
