--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -13,6 +13,7 @@ dependencies:
     - taxonomy.vocabulary.products_offered
     - taxonomy.vocabulary.tags
   module:
+    - apex_tools_custom_quotation
     - comment
     - contact
     - media
@@ -32,6 +33,7 @@ permissions:
   - 'access content'
   - 'access site-wide contact form'
   - 'access taxonomy overview'
+  - 'create quotation'
   - 'search content'
   - 'select terms in continent'
   - 'select terms in department'
@@ -78,6 +80,7 @@ permissions:
   - 'view paragraph content testimonials_block'
   - 'view paragraph content testimonials_section'
   - 'view paragraph content video_bundle'
+  - 'view quotation'
   - 'view term names in continent'
   - 'view term names in department'
   - 'view term names in distributor_level'
