--- a/config/apex-tools/local/core.extension.yml
+++ b/config/apex-tools/local/core.extension.yml
@@ -11,6 +11,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   apex_migrations: 0
+  apex_tools_custom_quotation: 0
   at_migrations: 0
   atg_api: 0
   atg_callout: 0
@@ -33,6 +34,7 @@ module:
   cleco_vuejs: 0
   color: 0
   comment: 0
+  conditional_fields: 0
   config: 0
   config_export_ignore: 0
   config_filter: 0
@@ -60,11 +62,13 @@ module:
   entity: 0
   entity_browser: 0
   entity_browser_entity_form: 0
+  entity_print: 0
   entity_reference_revisions: 0
   entity_usage: 0
   feeds: 0
   feeds_tamper: 0
   field: 0
+  field_group: 0
   field_ui: 0
   file: 0
   file_mdm: 0
@@ -136,6 +140,7 @@ module:
   sfweb2lead_webform: 0
   shield: 0
   shortcut: 0
+  simple_multistep: 0
   sophron: 0
   stage_file_proxy: 0
   swiftmailer: 0
