APS-166- config changes

--- a/config/clecotools/default/core.entity_form_display.node.home.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.home.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.home.field_testimonials_block
     - field.field.node.home.field_trusted_by_biggest
     - node.type.home
+    - workflows.workflow.editorial
   module:
     - block_field
     - content_moderation
