--- a/config/clecotools/default/core.entity_form_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.solutions.default.yml
@@ -13,10 +13,11 @@ dependencies:
     - field.field.node.solutions.field_industry_solutions
     - field.field.node.solutions.field_mailing_list_form
     - field.field.node.solutions.field_seo
+    - field.field.node.solutions.field_trusted_by_biggest
     - field.field.node.solutions.field_webform
     - node.type.solutions
-    - workflows.workflow.editorial
   module:
+    - block_field
     - content_moderation
     - metatag
     - paragraphs
@@ -41,7 +42,7 @@ content:
     third_party_settings: {  }
   field_callout_section_footer:
     type: entity_reference_paragraphs
-    weight: 8
+    weight: 9
     region: content
     settings:
       title: 'Callout Section Footer'
@@ -53,7 +54,7 @@ content:
     third_party_settings: {  }
   field_card:
     type: entity_reference_autocomplete
-    weight: 7
+    weight: 8
     region: content
     settings:
       match_operator: CONTAINS
@@ -63,7 +64,7 @@ content:
     third_party_settings: {  }
   field_featured_products:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     region: content
     settings:
       title: 'Featured Products'
@@ -75,7 +76,7 @@ content:
     third_party_settings: {  }
   field_find_a_distributor:
     type: entity_reference_paragraphs
-    weight: 9
+    weight: 10
     region: content
     settings:
       title: 'Find a Distributor'
@@ -87,7 +88,7 @@ content:
     third_party_settings: {  }
   field_forms:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     region: content
     settings:
       title: Forms
@@ -111,7 +112,7 @@ content:
     third_party_settings: {  }
   field_industry_solutions:
     type: paragraphs
-    weight: 16
+    weight: 17
     region: content
     settings:
       title: Paragraph
@@ -129,7 +130,7 @@ content:
     third_party_settings: {  }
   field_mailing_list_form:
     type: entity_reference_paragraphs
-    weight: 10
+    weight: 11
     region: content
     settings:
       title: 'Mailing List Form'
@@ -141,15 +142,24 @@ content:
     third_party_settings: {  }
   field_seo:
     type: metatag_firehose
-    weight: 14
+    weight: 15
     region: content
     settings:
       sidebar: true
       use_details: true
     third_party_settings: {  }
+  field_trusted_by_biggest:
+    type: block_field_default
+    weight: 4
+    region: content
+    settings:
+      plugin_id: ''
+      settings: {  }
+      configuration_form: full
+    third_party_settings: {  }
   field_webform:
     type: webform_entity_reference_select
-    weight: 6
+    weight: 7
     region: content
     settings:
       default_data: true
@@ -164,19 +174,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 15
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 12
+    weight: 13
     region: content
     settings:
       display_label: true
@@ -195,7 +205,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
