--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -21,8 +21,11 @@ module:
   automated_cron: 0
   better_exposed_filters: 0
   big_pipe: 0
+  blazy: 0
+  blazy_ui: 0
   block: 0
   block_content: 0
+  block_field: 0
   breakpoint: 0
   captcha: 0
   ckeditor: 0
@@ -129,6 +132,9 @@ module:
   serialization: 0
   sfweb2lead_webform: 0
   shortcut: 0
+  slick: 0
+  slick_ui: 0
+  slick_views: 0
   sophron: 0
   swiftmailer: 0
   system: 0
