--- a/config/apex-tools/default/node.type.solutions.yml
+++ b/config/apex-tools/default/node.type.solutions.yml
@@ -14,4 +14,4 @@ description: 'Interior page to highlight products and industries.'
 help: ''
 new_revision: false
 preview_mode: 1
-display_submitted: true
+display_submitted: false
