--- a/config/apex-tools/default/core.extension.yml
+++ b/config/apex-tools/default/core.extension.yml
@@ -7,6 +7,7 @@ module:
   advagg: 0
   advagg_js_minify: 0
   apex_migrations: 0
+  apex_tools_custom_quotation: 0
   advagg_css_minify: 0
   atg_api: 0
   atg_callout: 0
@@ -30,6 +31,7 @@ module:
   cleco_vuejs: 0
   color: 0
   comment: 0
+  conditional_fields: 0
   config: 0
   config_export_ignore: 0
   config_filter: 0
@@ -54,11 +56,13 @@ module:
   entity: 0
   entity_browser: 0
   entity_browser_entity_form: 0
+  entity_print: 0
   entity_reference_revisions: 0
   entity_usage: 0
   feeds: 0
   feeds_tamper: 0
   field: 0
+  field_group: 0
   field_ui: 0
   file: 0
   file_mdm: 0
@@ -131,6 +135,7 @@ module:
   serialization: 0
   sfweb2lead_webform: 0
   shortcut: 0
+  simple_multistep: 0
   sophron: 0
   swiftmailer: 0
   system: 0
