APS-146: stibo delta config for Clecotools.

--- a/config/clecotools/default/migrate_plus.migration.cleco_products.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products.yml
@@ -168,7 +168,18 @@ process:
     skip_primary_list: 1
     asset_type:
       - 'Beauty-Glamour Image'
-      - SecondaryImage
+      - 'SecondaryImage'
+      - 'Cutaway Image'
+      - 'Dimensional Diagram'
+      - 'eGraphics'
+      - 'Hightlight Image'
+      - 'ICON'
+      - 'In Package Image'
+      - 'In Use Image'
+      - 'Line Art'
+      - 'Nomenclature'
+      - 'Product Logo'
+      - 'WarningImage'
     langcode: en
   status:
     plugin: cleco_map_product_status
