--- a/config/clecotools/default/core.entity_form_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.solutions.default.yml
@@ -12,10 +12,12 @@ dependencies:
     - field.field.node.solutions.field_hero
     - field.field.node.solutions.field_industry_solutions
     - field.field.node.solutions.field_mailing_list_form
+    - field.field.node.solutions.field_related_solutions
     - field.field.node.solutions.field_seo
     - field.field.node.solutions.field_trusted_by_biggest
     - field.field.node.solutions.field_webform
     - node.type.solutions
+    - workflows.workflow.editorial
   module:
     - block_field
     - content_moderation
@@ -42,7 +44,7 @@ content:
     third_party_settings: {  }
   field_callout_section_footer:
     type: entity_reference_paragraphs
-    weight: 9
+    weight: 10
     region: content
     settings:
       title: 'Callout Section Footer'
@@ -54,7 +56,7 @@ content:
     third_party_settings: {  }
   field_card:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 9
     region: content
     settings:
       match_operator: CONTAINS
@@ -76,7 +78,7 @@ content:
     third_party_settings: {  }
   field_find_a_distributor:
     type: entity_reference_paragraphs
-    weight: 10
+    weight: 11
     region: content
     settings:
       title: 'Find a Distributor'
@@ -88,7 +90,7 @@ content:
     third_party_settings: {  }
   field_forms:
     type: entity_reference_paragraphs
-    weight: 6
+    weight: 7
     region: content
     settings:
       title: Forms
@@ -112,7 +114,7 @@ content:
     third_party_settings: {  }
   field_industry_solutions:
     type: paragraphs
-    weight: 17
+    weight: 18
     region: content
     settings:
       title: Paragraph
@@ -130,7 +132,7 @@ content:
     third_party_settings: {  }
   field_mailing_list_form:
     type: entity_reference_paragraphs
-    weight: 11
+    weight: 12
     region: content
     settings:
       title: 'Mailing List Form'
@@ -140,9 +142,21 @@ content:
       form_display_mode: default
       default_paragraph_type: mailing_list_form
     third_party_settings: {  }
+  field_related_solutions:
+    type: entity_reference_paragraphs
+    weight: 6
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
   field_seo:
     type: metatag_firehose
-    weight: 15
+    weight: 16
     region: content
     settings:
       sidebar: true
@@ -159,7 +173,7 @@ content:
     third_party_settings: {  }
   field_webform:
     type: webform_entity_reference_select
-    weight: 7
+    weight: 8
     region: content
     settings:
       default_data: true
@@ -174,19 +188,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 13
+    weight: 14
     region: content
     settings:
       display_label: true
@@ -205,7 +219,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
