--- a/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.solutions.field_hero
     - field.field.node.solutions.field_industry_solutions
     - field.field.node.solutions.field_mailing_list_form
+    - field.field.node.solutions.field_related_solutions
     - field.field.node.solutions.field_seo
     - field.field.node.solutions.field_trusted_by_biggest
     - field.field.node.solutions.field_webform
@@ -48,7 +49,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 6
+    weight: 7
     region: content
   field_card:
     type: entity_reference_entity_view
@@ -57,7 +58,7 @@ content:
       view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 9
+    weight: 10
     region: content
   field_featured_products:
     type: entity_reference_revisions_entity_view
@@ -75,7 +76,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 10
+    weight: 11
     region: content
   field_forms:
     type: entity_reference_revisions_entity_view
@@ -84,7 +85,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 7
+    weight: 8
     region: content
   field_hero:
     type: entity_reference_revisions_entity_view
@@ -95,12 +96,21 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
+  field_related_solutions:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 6
+    region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 11
+    weight: 12
     region: content
   field_trusted_by_biggest:
     type: block_field
@@ -115,7 +125,7 @@ content:
     settings:
       source_entity: true
     third_party_settings: {  }
-    weight: 8
+    weight: 9
     region: content
   links:
     settings: {  }
