--- a/config/apex-tools/default/field.field.paragraph.find_a_distributor.field_body_plain.yml
+++ b/config/apex-tools/default/field.field.paragraph.find_a_distributor.field_body_plain.yml
@@ -9,7 +9,7 @@ id: paragraph.find_a_distributor.field_body_plain
 field_name: field_body_plain
 entity_type: paragraph
 bundle: find_a_distributor
-label: 'Body (Plain)'
+label: Link
 description: ''
 required: false
 translatable: false
