--- a/config/apex-tools/default/paragraphs.paragraphs_type.find_a_distributor.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.find_a_distributor.yml
@@ -3,7 +3,8 @@ langcode: en
 status: true
 dependencies: {  }
 id: find_a_distributor
-label: 'Find a Distributor'
+label: 'Find a local rep'
 icon_uuid: null
+icon_default: null
 description: ''
 behavior_plugins: {  }
