--- a/config/apex-tools/default/block.block.findalocalrepeuropede.yml
+++ b/config/apex-tools/default/block.block.findalocalrepeuropede.yml
@@ -1,25 +1,25 @@
-uuid: 6c85fcd0-f23d-4453-964b-f2bf25637ad9
+uuid: 025ac958-e8b6-42d0-9024-9465b907b5ff
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.downloads_europe_de
+    - fixed_block_content.fixed_block_content.find_a_local_rep_eu_de
   module:
     - fixed_block_content
     - language
     - system
   theme:
     - apex_tools
-id: downloadseuropede
+id: findalocalrepeuropede
 theme: apex_tools
 region: content
-weight: -12
+weight: -2
 provider: null
-plugin: 'fixed_block_content:downloads_europe_de'
+plugin: 'fixed_block_content:find_a_local_rep_eu_de'
 settings:
-  id: 'fixed_block_content:downloads_europe_de'
-  label: 'Produktunterlagen finden'
-  label_display: visible
+  id: 'fixed_block_content:find_a_local_rep_eu_de'
+  label: 'Find a local rep (Europe / DE)'
+  label_display: '0'
   provider: fixed_block_content
   view_mode: ''
 visibility:
@@ -33,4 +33,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /downloads
+    pages: "/losungen/*\r\n/werkzeug/werkzeugkatalog/*"
