--- a/config/apex-tools/default/field.field.paragraph.find_a_distributor.field_title.yml
+++ b/config/apex-tools/default/field.field.paragraph.find_a_distributor.field_title.yml
@@ -9,7 +9,7 @@ id: paragraph.find_a_distributor.field_title
 field_name: field_title
 entity_type: paragraph
 bundle: find_a_distributor
-label: Title
+label: 'Link Text'
 description: ''
 required: false
 translatable: false
