--- a/config/clecotools/default/core.entity_view_display.node.solutions.industry_solutions.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.industry_solutions.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.solutions.field_alternating_media_blocks
     - field.field.node.solutions.field_callout_section_footer
     - field.field.node.solutions.field_card
+    - field.field.node.solutions.field_case_study
     - field.field.node.solutions.field_featured_products
     - field.field.node.solutions.field_find_a_distributor
     - field.field.node.solutions.field_forms
@@ -28,6 +29,7 @@ hidden:
   field_alternating_media_blocks: true
   field_callout_section_footer: true
   field_card: true
+  field_case_study: true
   field_featured_products: true
   field_find_a_distributor: true
   field_forms: true
