--- a/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.solutions.field_alternating_media_blocks
     - field.field.node.solutions.field_callout_section_footer
     - field.field.node.solutions.field_card
+    - field.field.node.solutions.field_case_study
     - field.field.node.solutions.field_featured_products
     - field.field.node.solutions.field_find_a_distributor
     - field.field.node.solutions.field_forms
@@ -59,6 +60,14 @@ content:
       link: true
     third_party_settings: {  }
     weight: 10
+    region: content
+  field_case_study:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 13
     region: content
   field_featured_products:
     type: entity_reference_revisions_entity_view
