--- a/config/apex-tools/default/search_api.index.acquia_search_index.yml
+++ b/config/apex-tools/default/search_api.index.acquia_search_index.yml
@@ -3,25 +3,20 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.media.field_media_file
-    - field.storage.media.field_listing_image
-    - field.storage.media.field_media_image
-    - field.storage.media.field_product_category
-    - field.storage.media.field_type
+    - field.storage.node.body
     - field.storage.node.field_360_image
     - field.storage.paragraph.field_360_loading_image
-    - field.storage.node.body
-    - field.storage.node.field_long_description
     - field.storage.node.field_downloads
-    - field.storage.node.field_product_features_cp
     - field.storage.node.field_feature_hotspots
     - field.storage.node.field_features_copy
     - field.storage.node.field_footnotes
-    - field.storage.node.field_video_background
-    - field.storage.node.field_video_popup
+    - field.storage.node.field_long_description
     - field.storage.node.field_media
+    - field.storage.media.field_media_file
+    - field.storage.media.field_product_category
     - field.storage.node.field_product_classifications
     - field.storage.node.field_product_features
+    - field.storage.node.field_product_features_cp
     - field.storage.node.field_product_line
     - field.storage.node.field_product_models
     - field.storage.node.field_related_products
@@ -29,17 +24,22 @@ dependencies:
     - field.storage.node.field_sku
     - field.storage.node.field_sku_group
     - field.storage.node.field_slug
+    - field.storage.media.field_type
     - field.storage.node.field_upc
+    - field.storage.node.field_video_background
+    - field.storage.node.field_video_popup
     - field.storage.node.field_web_display_sort_order
+    - field.storage.media.field_media_image
+    - field.storage.media.field_listing_image
     - search_api.server.acquia_search_api_solr_server
   module:
     - search_api_solr
-    - file
     - media
-    - taxonomy
-    - paragraphs
     - node
+    - file
+    - paragraphs
     - content_moderation
+    - taxonomy
     - search_api
     - cleco_vuejs
 third_party_settings:
@@ -575,6 +575,16 @@ field_settings:
     label: 'Socket Type Length'
     property_path: socket_type_length
     type: string
+  status:
+    label: 'Product Models » Content » Published'
+    datasource_id: 'entity:node'
+    property_path: 'field_product_models:entity:status'
+    type: boolean
+    dependencies:
+      config:
+        - field.storage.node.field_product_models
+      module:
+        - node
   status_1:
     label: Published
     datasource_id: 'entity:node'
@@ -651,26 +661,13 @@ processor_settings:
       preprocess_query: -16
     all_fields: 0
     fields:
-      - abrasive_capacity
-      - abrasive_type
-      - air_inlet_size_inh
-      - air_inlet_size_mmt
       - body
-      - bore_in
-      - bore_mm
       - bundle
-      - chisel
-      - collet_size
-      - control_type
-      - cutter_thread
       - drive_size
-      - drive_type
       - enhanced_product_image
       - enhanced_product_image_uri
       - enhanced_product_image_url
       - entity_type
-      - exhaust
-      - features
       - field_features_copy
       - field_footnotes
       - field_long_description
@@ -682,20 +679,13 @@ processor_settings:
       - field_type
       - field_upc
       - field_video_popup
-      - horsepower_hj
-      - horsepower_hp
-      - horsepower_kwt
       - item_type
-      - jaws
       - langcode
       - langcode_media
       - language_with_fallback
       - listing_image_name
       - listing_image_uri
       - listing_image_url
-      - material
-      - maximum_depth_of_cut_in
-      - maximum_depth_of_cut_mm
       - media_filename
       - media_filename_uri
       - media_filename_url
@@ -705,40 +695,12 @@ processor_settings:
       - media_product_category
       - medialang_type
       - moderation_state
-      - motor_configuration
       - name
-      - nose_insert_style
-      - orbital_pattern_size_inh
-      - orbital_pattern_size_mmt
-      - power
-      - power_type
       - product_category
       - product_category_name
-      - product_family
-      - saw_blade_capacity_in
-      - saw_blade_capacity_mm
-      - shank_diameter_inh
-      - speed
-      - speed_rpm
-      - spindle_size
-      - spindle_type
-      - stroke
-      - target_torque_ft_lbs
-      - target_torque_nm
-      - termination
-      - thrust_lbs
       - title
-      - tool_configuration
-      - tool_termination
-      - tool_type
-      - tool_type_compatibility
-      - torque_stall_ftlbs
-      - torque_stall_nm
-      - torque_transducer
       - type
-      - type_housing
       - uuid
-      - window_style
   cleco_add_item_type: {  }
   cleco_add_medialang_type: {  }
   cleco_add_model_specification: {  }
@@ -749,26 +711,13 @@ processor_settings:
       preprocess_query: -16
     all_fields: 0
     fields:
-      - abrasive_capacity
-      - abrasive_type
-      - air_inlet_size_inh
-      - air_inlet_size_mmt
       - body
-      - bore_in
-      - bore_mm
       - bundle
-      - chisel
-      - collet_size
-      - control_type
-      - cutter_thread
       - drive_size
-      - drive_type
       - enhanced_product_image
       - enhanced_product_image_uri
       - enhanced_product_image_url
       - entity_type
-      - exhaust
-      - features
       - field_features_copy
       - field_footnotes
       - field_long_description
@@ -780,20 +729,13 @@ processor_settings:
       - field_type
       - field_upc
       - field_video_popup
-      - horsepower_hj
-      - horsepower_hp
-      - horsepower_kwt
       - item_type
-      - jaws
       - langcode
       - langcode_media
       - language_with_fallback
       - listing_image_name
       - listing_image_uri
       - listing_image_url
-      - material
-      - maximum_depth_of_cut_in
-      - maximum_depth_of_cut_mm
       - media_filename
       - media_filename_uri
       - media_filename_url
@@ -803,44 +745,17 @@ processor_settings:
       - media_product_category
       - medialang_type
       - moderation_state
-      - motor_configuration
       - name
-      - nose_insert_style
-      - orbital_pattern_size_inh
-      - orbital_pattern_size_mmt
-      - power
-      - power_type
       - product_category
       - product_category_name
-      - product_family
-      - saw_blade_capacity_in
-      - saw_blade_capacity_mm
-      - shank_diameter_inh
-      - speed
-      - speed_rpm
-      - spindle_size
-      - spindle_type
-      - stroke
-      - target_torque_ft_lbs
-      - target_torque_nm
-      - termination
-      - thrust_lbs
       - title
-      - tool_configuration
-      - tool_termination
-      - tool_type
-      - tool_type_compatibility
-      - torque_stall_ftlbs
-      - torque_stall_nm
-      - torque_transducer
       - type
-      - type_housing
       - uuid
-      - window_style
   entity_status: {  }
   entity_type: {  }
   language_with_fallback: {  }
   rendered_item: {  }
+  search_api_exclude_unpublish_model_from_index: {  }
   solr_date_range:
     weights:
       preprocess_index: 0
